--- a/src/CadpazBundle/Resources/views/Pessoa/list.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/list.html.twig
@@ -21,7 +21,7 @@
     </script>
 {% else %}
 <table  id="example" class="userList" cellspacing="2" width="100%">
-<thead><tr><th>Nome</th><th>Data de Nascimento</th><th>Email</th><th>CPF</th></tr></thead>
+<thead><tr><th>Nome</th><th>Nome da mãe</th><th>Email</th><th>CPF</th></tr></thead>
 <tbody>
 {% for pessoa in pessoas %}
     <tr id="tr{{ pessoa.id }}">
