--- a/src/CadpazBundle/Resources/views/Relatorios/cores.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/cores.html.twig
@@ -8,6 +8,33 @@
 <div style="clear: both"></div>
 
 
+<div>
+{#Casos por tipo:<br>#}
+<table id="tbl_ori" class="display compact">
+    <thead class="tabela_pequena">
+        <tr>
+            <th>Cor</th>
+            {#<th>Percentual</th>#}
+            <th>Total</th>
+        </tr>
+    </thead>
+    <tbody class="tabela_pequena">
+        
+{% for cor in cores %}
+    <tr>
+        {#<td>{{ origem.origem }}</td><td> {{ (origem.total/total_origens*100)|number_format(1) }}%</td>#}
+        <td>{{ cor.cor }}</td><td> {{ cor.total }}</td>
+    </tr>
+{% endfor %}
+    {#<tr>
+        <td>Total geral</td><td>{{ total_origens }}</td>
+    </tr>#}
+    </tbody>
+</table>
+</div>
+
+
+
     {#<div style="float: right; width: 70%">#}
     <div>
 <div id="piechart_cores" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
