--- a/src/CadpazBundle/Resources/views/Relatorios/rendas.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/rendas.html.twig
@@ -7,6 +7,31 @@
 <div class="spacer"></div>
 <div style="clear: both"></div>
 
+<div>
+{#Casos por tipo:<br>#}
+<table id="tbl_ori" class="display compact">
+    <thead class="tabela_pequena">
+        <tr>
+            <th>Renda</th>
+            {#<th>Percentual</th>#}
+            <th>Total</th>
+        </tr>
+    </thead>
+    <tbody class="tabela_pequena">
+        
+{% for renda in rendas %}
+    <tr>
+        {#<td>{{ origem.origem }}</td><td> {{ (origem.total/total_origens*100)|number_format(1) }}%</td>#}
+        <td>{{ renda.renda }}</td><td> {{ renda.total }}</td>
+    </tr>
+{% endfor %}
+    {#<tr>
+        <td>Total geral</td><td>{{ total_origens }}</td>
+    </tr>#}
+    </tbody>
+</table>
+</div>
+
 
     {#<div style="float: right; width: 70%">#}
     <div>
