--- a/src/CadpazBundle/Resources/views/Relatorios/custom.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/custom.html.twig
@@ -21,6 +21,8 @@
             {% if (campos.email) is defined %}<th>Email</th>{% endif %}
             {% if (campos.telefone) is defined %}<th>Telefone</th>{% endif %}
             {% if (campos.endereco) is defined %}<th>Endereco</th>{% endif %}
+            {% if (campos.origem) is defined %}<th>Origem</th>{% endif %}
+            {% if (campos.beneficios) is defined %}<th>Benefícios Sociais</th>{% endif %}
         </tr>
     </thead>
     <tbody class="tabela_pequena">
@@ -39,6 +41,23 @@
         {% if campos.email is defined %}<td>{{d.email}}</td>{% endif %}
         {% if campos.telefone is defined %}<td>{{d.telefone}}</td>{% endif %}
         {% if campos.endereco is defined %}<td>{{d.endereco}}</td>{% endif %}
+        {% if campos.origem is defined %}<td>{{d.origem}}</td>{% endif %}
+        {% if campos.beneficios is defined %}
+            <td>
+                {% if d.beneficios is iterable %}
+                    {{ d.beneficios.peti ? 'PETI, ' : '' }}
+                    {{ d.beneficios.agenteJovem ? 'Agente Jovem, ' : '' }}
+                    {{ d.beneficios.bolsaFamilia ? 'Bolsa Familia, ' : '' }}
+                    {{ d.beneficios.bcp ? 'BCP, ' : '' }}
+                    {{ d.beneficios.naoRespondeu ? 'Não respondeu' : '' }}
+                    {{ d.beneficios.naoSabe ? 'Não sabe' : '' }}
+                    {{ d.beneficios.naoRecebe ? 'Não recebe' : '' }}
+                {% else %}
+                    {{ d.beneficios }}
+                {% endif %}
+                        
+            </td>
+        {% endif %}
     </tr>
 {% endfor %}
     
